# llm-classification

./: .gitignore  ARCHITECTURE.md  README.md  config.yaml  pyproject.toml
docs/: MOJIBAKE_DETECTION.md
llm_classification/: __init__.py  run.py
llm_classification/llm_clients/: README.md  __init__.py  base.py  gemini.py  ollama.py
llm_classification/models/: config.py  data.py  enums.py  response.py
llm_classification/services/: orchestrator.py  prompt_manager.py  text_utils.py
prompts/: README.md
prompts/mh_farmers_greivence/: original_gpt_batch_prompt.txt  system_prompt.txt
prompts/mh_farmers_greivence/categories/: departmental_process_delays.txt  governance_policy_level_issues.txt  information_and_communication_gaps.txt  system_department_coordination_issues.txt  system_portal_issues.txt
